--- a/analytics-worker/package.json
+++ b/analytics-worker/package.json
@@ -1,22 +1,20 @@
 {
   "name": "analytics-worker",
   "version": "1.0.0",
-  "description": "Background worker for analytics aggregation",
+  "description": "Analytics aggregation worker for PMS",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "node test-aggregation.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "mongoose": "^8.19.3",
-    "node-cron": "^4.2.1"
+    "node-cron": "^3.0.3",
+    "dotenv": "^16.4.1",
+    "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.3"
   }
 }
